[gd_scene load_steps=19 format=3 uid="uid://dk5yckvlyf6mr"]

[ext_resource type="Script" path="res://scripts/Lootbox.gd" id="1_wylit"]
[ext_resource type="Texture2D" uid="uid://dhvw47bgytt7l" path="res://art/inventory/lootbox.png" id="2_cxtwg"]
[ext_resource type="Texture2D" uid="uid://ce2qwl1d4fbe1" path="res://art/abilities/barrage_ability.png" id="3_4pcky"]
[ext_resource type="Script" path="res://compo/HitboxComponent.gd" id="3_4ygud"]
[ext_resource type="Script" path="res://compo/HealthCompoment.gd" id="4_nwfdy"]
[ext_resource type="Script" path="res://compo/hp_bar_component.gd" id="5_muuyd"]
[ext_resource type="AudioStream" uid="uid://cawq05g2gbb8q" path="res://sounds/lootbox/lootbox_hit1.wav" id="6_vv6ct"]
[ext_resource type="AudioStream" uid="uid://clcech6ohqon0" path="res://sounds/lootbox/lootbox_hit2.wav" id="7_yxngh"]
[ext_resource type="AudioStream" uid="uid://dvm775qafma0n" path="res://sounds/lootbox/lootbox_hit3.wav" id="8_n24rh"]
[ext_resource type="AudioStream" uid="uid://tn3bsp51xuq8" path="res://sounds/lootbox/lootbox_open.wav" id="9_7v2fh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ts54v"]
size = Vector2(128, 128)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5ioas"]
streams_count = 3
stream_0/stream = ExtResource("6_vv6ct")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_yxngh")
stream_1/weight = 1.0
stream_2/stream = ExtResource("8_n24rh")
stream_2/weight = 1.0

[sub_resource type="Curve" id="Curve_mc0yt"]
_data = [Vector2(0.0641711, 0.747253), 0.0, 0.0, 0, 0, Vector2(0.55615, 1), 0.0, 0.0, 0, 0, Vector2(0.97861, 0.791209), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_usrfr"]
offsets = PackedFloat32Array(0.0116279, 0.389937, 1)
colors = PackedColorArray(0.14902, 0.701961, 0.376471, 1, 0.503275, 0.532808, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_gppjd"]
offsets = PackedFloat32Array(0, 0.717791)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_enhda"]
gradient = SubResource("Gradient_gppjd")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_4lj1k"]
resource_name = "spawn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LootImage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -150)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LootImage:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(4, 4)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_moving"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sww7l"]
_data = {
"spawn": SubResource("Animation_4lj1k")
}

[node name="Lootbox" type="Node2D"]
script = ExtResource("1_wylit")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 2
collision_mask = 0
script = ExtResource("3_4ygud")
health_component = NodePath("../HealthComponent")

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_ts54v")

[node name="LootImage" type="Sprite2D" parent="."]
texture = ExtResource("3_4pcky")

[node name="BoxImage" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_cxtwg")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_nwfdy")
max_health = 80.0

[node name="HpBarComponent" type="ProgressBar" parent="." node_paths=PackedStringArray("health_component")]
offset_right = 4.0
offset_bottom = 27.0
show_percentage = false
script = ExtResource("5_muuyd")
health_component = NodePath("../HealthComponent")
lenght = 240
height = 15
pos_x = -60
pos_y = 70

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_5ioas")
volume_db = 3.0
bus = &"sfx"

[node name="Open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_7v2fh")
volume_db = 3.0
bus = &"sfx"

[node name="BoxParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -64)
rotation = -1.5708
emitting = false
amount = 30
lifetime = 0.4
emission_shape = 3
emission_rect_extents = Vector2(1, 64)
spread = 35.0
gravity = Vector2(0, 0)
initial_velocity_min = 440.0
initial_velocity_max = 460.0
angular_velocity_min = 90.0
angular_velocity_max = 130.0
scale_amount_min = 10.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_mc0yt")
color = Color(0.14902, 0.701961, 0.376471, 1)
color_ramp = SubResource("Gradient_usrfr")

[node name="BoxLight" type="PointLight2D" parent="."]
position = Vector2(4.57764e-05, 8.96831e-44)
scale = Vector2(1.32813, 1.32813)
color = Color(0.901961, 0.0901961, 0.439216, 1)
energy = 2.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_enhda")
texture_scale = 15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sww7l")
}

[connection signal="hitted" from="HealthComponent" to="." method="_on_health_component_hitted"]
[connection signal="killed" from="HealthComponent" to="." method="_on_health_component_killed"]
